Add `rust-version` field to `Cargo.toml`
This was previously forgotten.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ keywords = ["arguments", "parsing", "string", "osstring", "osstr"]
 categories = ["command-line-interface", "parsing", "rust-patterns"]
 license = "MITNFA"
 maintenance = { status = "as-is" }
+rust-version = "1.63"
